# SE_Kernel

./: CMakeLists.txt
headers/: clock_s.h  cpu_data_s.h  executor.h  linkedlist_s.h  loader.h  memory_s.h  pcb_s.h  processgenerator.h  runqueue_s.h  sched_prio_fifo.h  sched_simple_fifo.h  scheduler_data_interface.h  scheduler_s.h
src/: clock.c  cpu.c  executor_s.c  linkedlist.c  loader_s.c  main.c  memory_s.c  pcb_s.c  processgenerator.c  runqueues.c  scheduler.c  scheduler_data_interface.c  scheduler_priority_fifo.c  scheduler_simple_fifo.c
